2013-12-16 Miguel de Dios <miguel.dedios@artica.es>
	
	* res/values/strings.xml, res/values-es/strings.xml,
	res/values-ja/strings.xml: update the names of Pandora.

2013-12-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* res/drawable-ldpi/icon_logo_pandorafms.png,
	res/drawable-ldpi/pandorafms_logo.png, ic_launcher-web.png: updated
	the icons, thanks Carla.

2013-12-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* AndroidManifest.xml: changed the android version support for to
	show the option button.

2013-12-13 Miguel de Dios <miguel.dedios@artica.es>
	
	* src/pandorafms/pandorafmsandroidconsole/ConnectionCustomToast.java:
	cleaned source code style.
	
	* res/drawable-ldpi/pandorafms_logo.png: update the icon.

2013-12-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* res/drawable-ldpi/refresh.png, res/drawable-ldpi/config.png,
	res/drawable-ldpi/help.png, res/drawable-ldpi/exit.png: updated the
	icons for the option menu, thanks Carla.

2013-11-14 Miguel de Dios <miguel.dedios@artica.es>
	
	* res/drawable-ldpi/config.png, res/drawable-ldpi/help.png,
	res/drawable-ldpi/exit.png, res/drawable-ldpi/refresh.png: updated
	the icons of app to new Pandora style, thanks Carla.

2013-10-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* src/pandorafms/pandorafmsandroidconsole/Options.java,
	src/pandorafms/pandorafmsandroidconsole/PandoraWebView.java: setted
	the default values the Pandora public demo.

2013-10-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* .classpath: some changes that eclipse makes "automagicaly".
	
	* src/pandorafms/pandorafmsandroidconsole/PandoraWebView.java:
	fixed java-android warnings.
	
	* res/layout/activity_web_view.xml: improved the source code style.
	
	* AndroidManifest.xml: fixed with ugly fix the lost "option button"
	in the phones/tables with android version over that honeycomb and
	have not a fisical option menu. Fixes the warnings of android.

2013-05-30 Miguel de Dios <miguel.dedios@artica.es>
	