@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="pandorafms.pandorafmsandroidconsole"
-	android:versionCode="1"
-	android:versionName="1.0" >
+	android:versionCode="2"
+	android:versionName="1.1" >
 	
     <uses-permission android:name="android.permission.INTERNET" />
     
